--- a/V2.0/alerta.html
+++ b/V2.0/alerta.html
@@ -15,8 +15,8 @@
 <body>
     <!--INÍCIO DO HEADER-->
     <header id="header">
-        <a href="home.html"><img src="Img&Icons/globo.png" alt="Icone" id="img1"></a>
-        <p id="p">ALERTA</p>
+        <a href="home.html"><img src="Img&Icons/globo.png" alt="Icone" class="img1"></a>
+        <p class="p">ALERTA</p>
         <!--INÍCIO MENU DROPDOWN-->
         <div class="btn-group dropstart">
             <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,12 +61,12 @@
     <!--FIM DO HEADER-->
 
 
-    <div id="div2">
-        <p id="p2">ATENÇÃO!</p>
+    <div class="div2">
+        <p class="p2">ATENÇÃO!</p>
     </div>
 
     <!--INÍCIO YOUTUBE-->
-    <div id="div5">
+    <div class="div5">
         <iframe width="300" height="148" src="https://www.youtube.com/embed/h0oDYGnMr6k" title="YouTube video player"
             frameborder="15"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -74,15 +74,15 @@
     </div>
     <!--FIM YOUTUBE-->
 
-    <p id="p3">Sinais que indicam que pode ocorrer um deslizamento: Aparecimento de fendas, depressões no terreno,
+    <p class="p3">Sinais que indicam que pode ocorrer um deslizamento: Aparecimento de fendas, depressões no terreno,
         rachaduras nas paredes das casas, inclinação de tronco de árvores, de postes e o surgimento de minas d'água.
         Ocorrendo um desses sinais, a Defesa Civil deve ser imediatamente acionada.</p>
 
 
     <!--INÍCIO DICAS-->
-    <div id="div6">
-        <h1 id="h1">FIQUE ALERTA!</h1>
-        <p id="p5">Não destrua a vegetação das encostas;<br>
+    <div class="div6">
+        <h1 class="h1">FIQUE ALERTA!</h1>
+        <p class="p5">Não destrua a vegetação das encostas;<br>
             Não amontoe sujeira e lixo em lugares inclinados porque eles entopem a saída de água e desestabilizam os
             terrenos provocando deslizamentos;<br>
             Não jogue lixo em vias públicas ou barreiras, pois ele aumenta o peso e o
@@ -99,12 +99,12 @@
     <!--FIM DICAS-->
 
     <!--INÍCIO MAPS-->
-    <div id="div7">
-        <div id="div3">
-            <p id="p4">LOCAIS DE POSSIVEIS DESLIZAMENTOS</p>
+    <div class="div7">
+        <div class="div3">
+            <p class="p4">LOCAIS DE POSSIVEIS DESLIZAMENTOS</p>
         </div>
 
-        <div id="div4">
+        <div class="div4">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7901.7572749577985!2d-34.906821!3d-8.01145!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab19cb4ac993b3%3A0xebee7c0132a2e5b2!2sR.%20Prof.%20Jos%C3%A9%20Amarino%20dos%20R%C3%A9is%2C%20Recife%20-%20PE!5e0!3m2!1spt-BR!2sbr!4v1681332442322!5m2!1spt-BR!2sbr"
                 width="400" height="300" style="padding: 20px; border-radius: 10px;" allowfullscreen="" loading="lazy"
