--- a/V2.0/guia.html
+++ b/V2.0/guia.html
@@ -62,26 +62,154 @@
 
     <div id="div2">
         <div class="principal">
-            <div class="secundaria"><img src="Img&Icons/informacoes.png" alt="Imagem-Informação" class="img2"></div>
+            <div class="secundaria">
+                <img src="Img&Icons/informacoes.png" alt="Imagem-Informação" class="img2" onclick="openTab('tab1')">
+            </div>
             <p class="p2">COMO EVITAR?</p>
             <p class="p3">Maneiras de evitar o deslizamento e acidentes em morros.</p>
         </div>
         <div class="principal">
-            <div class="secundaria"><img src="Img&Icons/interrogatorio.png" alt="Imagem-Interrogatório" class="img2">
+            <div class="secundaria">
+                <img src="Img&Icons/interrogatorio.png" alt="Imagem-Interrogatório" class="img2"
+                    onclick="openTab('tab2')">
             </div>
             <p class="p2">O QUE FAZER?</p>
             <p class="p3">Como agir em caso de deslizamentos na sua casa.</p>
         </div>
         <div class="principal">
-            <div class="secundaria"><img src="Img&Icons/marcador.png" alt="Imagem-Marcador" class="img2"></div>
+            <div class="secundaria">
+                <img src="Img&Icons/marcador.png" alt="Imagem-Marcador" class="img2" onclick="openTab('tab3')">
+            </div>
             <p class="p2">LOCAIS</p>
             <p class="p3">Mapa com locais onde pode se buscar ajuda.</p>
         </div>
+
+        <div class="tab-content" id="tab1">
+            <div class="div5">
+                <ul class="ul">
+                    <li>
+                        Monitoramento: Mantenha-se atualizado com os boletins meteorológicos e alertas de desastres
+                        naturais para estar ciente de condições climáticas que possam aumentar o risco de deslizamentos.
+                    </li>
+                    <br>
+                    <li>
+                        Manutenção preventiva: Realize a manutenção regular da sua propriedade. Verifique se os sistemas
+                        de drenagem estão funcionando corretamente e limpe as calhas para evitar o acúmulo de água nas
+                        encostas.
+                    </li>
+                    <br>
+                    <li>
+                        Evacuação preventiva: Se as autoridades emitirem um aviso de evacuação devido a risco de
+                        deslizamento, siga as orientações e saia da área o mais rápido possível.
+                    </li>
+                    <br>
+                    <li>
+                        Controle da vegetação: Mantenha a vegetação nas encostas bem cuidada, evitando o corte excessivo
+                        de árvores e vegetação que ajuda a estabilizar o solo.
+                    </li>
+                    <br>
+                    <li>
+                        Evite construções inadequadas: Se estiver construindo ou reformando, certifique-se de seguir as
+                        regulamentações e orientações locais para construção em áreas propensas a deslizamentos.
+                    </li>
+                    <br>
+                    <li>
+                        Preparação de emergência: Tenha um plano de emergência para você e sua família, incluindo um
+                        ponto
+                        de encontro seguro em caso de evacuação.
+                    </li>
+                    <br>
+                    <li>
+                        Comunicação com vizinhos: Mantenha contato com seus vizinhos e crie uma rede de comunicação para
+                        compartilhar informações importantes sobre condições locais e riscos.
+                    </li>
+                    <br>
+                    <li>
+                        Busque orientação profissional: Consulte especialistas em geologia e engenharia geotécnica para
+                        obter conselhos específicos sobre como proteger sua propriedade contra deslizamentos.
+                    </li>
+                    <br>
+                    <li>
+                        Participação comunitária: Junte-se a iniciativas comunitárias relacionadas à prevenção de
+                        deslizamentos para aumentar a conscientização e fortalecer a resiliência da comunidade.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="tab-content" id="tab2">
+            <div class="div5">
+                <ul class="ul">
+                    <li>
+                        Perceba os sinais: Esteja atento a sinais de alerta, como ruídos estranhos, rachaduras nas
+                        paredes ou
+                        inclinação do terreno. Se suspeitar de um possível deslizamento, tome medidas imediatas.
+                    </li>
+                    <li>
+                        Evacue imediatamente: Se houver qualquer sinal de deslizamento ou instabilidade do terreno,
+                        deixe a
+                        casa
+                        imediatamente. Não espere por confirmação, pois deslizamentos podem ser extremamente rápidos e
+                        perigosos.
+                    </li>
+                    <li>
+                        Escolha um caminho seguro: Procure um caminho de evacuação seguro, que esteja longe da área de
+                        risco e não
+                        bloqueado por escombros ou lama. Evite áreas próximas a encostas e barrancos.
+                    </li>
+                    <li>
+                        Leve apenas o essencial: Ao sair de sua casa, leve apenas o necessário, como documentos
+                        importantes,
+                        medicamentos e itens essenciais para sua segurança e bem-estar.
+                    </li>
+                    <li>
+                        Comunique-se com vizinhos: Avise seus vizinhos sobre o deslizamento e, se possível, verifique se
+                        eles
+                        precisam de ajuda para evacuar.
+                    </li>
+                    <li>
+                        Desligue serviços: Desligue o fornecimento de água, eletricidade e gás em sua casa para evitar
+                        riscos
+                        adicionais.
+                    </li>
+                    <li>
+                        Não retorne à casa: Não volte para a casa até que as autoridades locais deem permissão para
+                        retornar
+                        com
+                        segurança. Deslizamentos podem ocorrer em cascata e a área pode continuar instável.
+                    </li>
+                    <li>
+                        Busque abrigo seguro: Procure abrigo em uma área elevada e segura, longe do local do
+                        deslizamento.
+                        Se
+                        necessário, busque ajuda em centros de abrigo designados pelas autoridades locais.
+                    </li>
+                    <li>
+                        Entre em contato com as autoridades: Informe a Defesa Civil, o Corpo de Bombeiros ou outras
+                        autoridades
+                        competentes sobre o deslizamento, sua localização e o número de pessoas envolvidas.
+                    </li>
+                    <li>
+                        Fique informado: Acompanhe as atualizações de emergência fornecidas pelas autoridades locais e
+                        fique
+                        atento
+                        a informações sobre a situação e a segurança da área afetada.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="tab-content" id="tab3">
+            <h2>Conteúdo da Aba 3</h2>
+            <p>Este é o conteúdo da terceira aba.</p>
+        </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="guia.js"></script>
 </body>
 
 </html>
