--- a/V2.0/cadastro.html
+++ b/V2.0/cadastro.html
@@ -64,17 +64,21 @@
             <p id="p2">Insira suas credenciais</p>
         </div>
         <div id="div5">
-            <form action="#">
-            <input type="text" name="nome" id="nome" placeholder="Nome" minlength="3">
-            <br>
-            <input type="email" name="email" id="email" placeholder="Email">
-            <br>
-            <input type="password" name="senha" id="senha" placeholder="Senha" minlength="6" maxlength="12">
-            <br>
-            <input type="number" name="telefone" id="telefone" placeholder="Telefone" maxlength="11">
 
-            <button type="button" id="botao">Cadastrar-se</button>
-        </form>
+            <input type="nome" name="nome" id="nome" placeholder="Digite seu nome" minlength="3" autocomplete="off">
+            <p class="error" id="alerta_nome"></p>
+
+            <input type="email" name="email" id="email" placeholder="Digite seu email">
+            <p class="error" id="alerta_email"></p>
+
+            <input type="senha" name="senha" id="senha" placeholder="Digite sua senha" minlength="6" maxlength="12">
+            <p class="error" id="alerta_senha"></p>
+
+            <input type="telefone" name="telefone" id="telefone" placeholder="Digite seu telefone" maxlength="11">
+            <p class="error" id="alerta_telefone"></p>
+
+            <button onclick="cadastrar()" id="cadastrar" type="button">Cadastrar-se</button>
+
         </div>
         <div id="div3">
             <p id="p1">Bem-Vindo!</p>
